[gd_scene load_steps=11 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://environment/Ground.tscn" type="PackedScene" id=3]
[ext_resource path="res://environment/ObstacleSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://World.gd" type="Script" id=6]
[ext_resource path="res://ui/MenuLayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/audio/hit.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/point.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/audio/die.wav" type="AudioStream" id=10]
[ext_resource path="res://environment/Background.tscn" type="PackedScene" id=11]

[node name="World" type="Node2D"]
script = ExtResource( 6 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="MenuLayer" parent="." instance=ExtResource( 7 )]

[node name="Background" parent="." instance=ExtResource( 11 )]

[node name="ObstacleSpawner" parent="." instance=ExtResource( 4 )]
position = Vector2( 800, 0 )

[node name="Ground" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 686 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 115, 427 )

[node name="HitAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="ScoreAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="DieAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
